--- a/docroot/themes/custom/limestone/scss/modules/_paragraphs.scss
+++ b/docroot/themes/custom/limestone/scss/modules/_paragraphs.scss
@@ -15,10 +15,6 @@
   h2, h3, h4, h5, h6 {
 
   }
-  background-image: none !important;
-  @include breakpoint(phone) {
-    background-image: inherit !important;
-  }
 }
 
 .paragraph-border-sm {
